--- a/nicnbk-ui-angular2/src/app/hf/view/hf.manager-search.component.html
+++ b/nicnbk-ui-angular2/src/app/hf/view/hf.manager-search.component.html
@@ -1,17 +1,17 @@
 <div class="container">
     <!--<div class="row">-->
-        <!--<div class="col-md-12">-->
-            <!--<div class="dropdown pull-right">-->
-                <!--<button class="btn btn-primary dropdown-toggle" type="button" id="menu1" data-toggle="dropdown">New-->
-                    <!--<span class="bootstrapCaret"></span></button>-->
-                <!--<ul class="dropdown-menu" role="menu" aria-labelledby="menu1">-->
-                    <!--<li role="presentation">-->
-                        <!--<a [routerLink]="['/hf/fundProfile/0']" role="menuitem" tabindex="-1" >Fund</a></li>-->
-                    <!--<li role="presentation">-->
-                        <!--<a [routerLink]="['/hf/managerProfile/0']" role="menuitem" tabindex="-1" >Manager</a></li>-->
-                <!--</ul>-->
-            <!--</div>-->
-        <!--</div>-->
+    <!--<div class="col-md-12">-->
+    <!--<div class="dropdown pull-right">-->
+    <!--<button class="btn btn-primary dropdown-toggle" type="button" id="menu1" data-toggle="dropdown">New-->
+    <!--<span class="bootstrapCaret"></span></button>-->
+    <!--<ul class="dropdown-menu" role="menu" aria-labelledby="menu1">-->
+    <!--<li role="presentation">-->
+    <!--<a [routerLink]="['/hf/fundProfile/0']" role="menuitem" tabindex="-1" >Fund</a></li>-->
+    <!--<li role="presentation">-->
+    <!--<a [routerLink]="['/hf/managerProfile/0']" role="menuitem" tabindex="-1" >Manager</a></li>-->
+    <!--</ul>-->
+    <!--</div>-->
+    <!--</div>-->
     <!--</div>-->
     <div class="row">
         <div class="row top-buffer" >
@@ -32,45 +32,47 @@
 
     <div class="jumbotron">
         <br/>
-        <div class="row">
-            <div class="col-md-12">
-                <div class="col-md-9">
-                    <div class="form-group">
-                        <label for="fundName">Manager name</label>
-                        <input type="text" class="form-control" id="fundName" [(ngModel)]="searchParams.name"
-                        placeholder="Enter manager name..."
-                        />
+        <form (ngSubmit)="search()">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="col-md-9">
+                        <div class="form-group">
+                            <label for="fundName">Manager name</label>
+                            <input type="text" class="form-control" id="fundName" [(ngModel)]="searchParams.name" name="fundName"
+                                   placeholder="Enter manager name..."
+                            />
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <!--<div class="row">-->
+            <!--<div class="row">-->
             <!--<div class="col-md-12">-->
-                <!--<div class="col-md-3">-->
-                    <!--<div class="form-group">-->
-                        <!--<label for="strategy">Strategy</label>-->
-                        <!--<select class="form-control" id="strategy">-->
-                            <!--<option value="0">-&#45;&#45;</option>-->
-                            <!--<option *ngFor = "let item of strategyList" [value]="item.code">{{item.nameEn}}</option>-->
-                        <!--</select>-->
-                    <!--</div>-->
-                <!--</div>-->
-                <!--<div class="col-md-3">-->
-                    <!--<div class="form-group">-->
-                        <!--<label for="status">Status</label>-->
-                        <!--<select class="form-control" id="status">-->
-                            <!--<option value="0">-&#45;&#45;</option>-->
-                            <!--<option *ngFor = "let item of statusList" [value]="item.code">{{item.nameEn}}</option>-->
-                        <!--</select>-->
-                    <!--</div>-->
-                <!--</div>-->
+            <!--<div class="col-md-3">-->
+            <!--<div class="form-group">-->
+            <!--<label for="strategy">Strategy</label>-->
+            <!--<select class="form-control" id="strategy">-->
+            <!--<option value="0">-&#45;&#45;</option>-->
+            <!--<option *ngFor = "let item of strategyList" [value]="item.code">{{item.nameEn}}</option>-->
+            <!--</select>-->
             <!--</div>-->
-        <!--</div>-->
-        <div class="row">
-            <div class="col-md-12">
-                <button type="button" class="btn btn-success pull-right" (click)="search()">Search</button>
+            <!--</div>-->
+            <!--<div class="col-md-3">-->
+            <!--<div class="form-group">-->
+            <!--<label for="status">Status</label>-->
+            <!--<select class="form-control" id="status">-->
+            <!--<option value="0">-&#45;&#45;</option>-->
+            <!--<option *ngFor = "let item of statusList" [value]="item.code">{{item.nameEn}}</option>-->
+            <!--</select>-->
+            <!--</div>-->
+            <!--</div>-->
+            <!--</div>-->
+            <!--</div>-->
+            <div class="row">
+                <div class="col-md-12">
+                    <button type="submit" class="btn btn-success pull-right">Search</button>
+                </div>
             </div>
-        </div>
+        </form>
     </div>
 
     <div>
