--- a/nicnbk-ui-angular2/src/app/hf/view/hf.manager-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/hf/view/hf.manager-profile.component.html
@@ -353,7 +353,7 @@
                             <tr *ngFor = "let memo of memoList" style="cursor: pointer" (click)="navigate(memo.memoType, memo.id)">
                                 <td width="10%" >{{getMeetingTypeName(memo.meetingType)}}</td>
                                 <!--<td width="30%"><a style="cursor: pointer" (click)="navigate(memo.memoType, memo.id)">{{memo.firmName}}</a></td>-->
-                                <td width="30%">{{memo.fundName}}</td>
+                                <td width="30%"><span *ngIf="memo.fundName == null || memo.fundName == ''">---</span>{{memo.fundName}}</td>
                                 <!--<td width="10%" th:text="${memoItem.meetingDate}"></td>-->
                                 <td width="10%">{{memo.meetingLocation}}</td>
                                 <td width="10%">{{memo.meetingDate}}</td>
