--- a/nicnbk-ui-angular2/src/app/m2s2/view/memo-list.component.html
+++ b/nicnbk-ui-angular2/src/app/m2s2/view/memo-list.component.html
@@ -134,7 +134,7 @@
                     <!--<td width="30%"><a style="cursor: pointer" (click)="navigate(memo.memoType, memo.id)">{{memo.fundName}}</a></td>-->
                     <!--<td width="10%" th:text="${memoItem.meetingDate}"></td>-->
                     <td width="30%">{{memo.firmName}}</td>
-                    <td width="30%">{{memo.fundName}}</td>
+                    <td width="30%"><span *ngIf="memo.fundName == null || memo.fundName == ''">---</span>{{memo.fundName}}</td>
                     <td width="10%">{{memo.meetingDate}}</td>
                     <!--<td width="10%">{{memo.author}}</td>-->
                     <td width="10%">{{memo.owner}}</td>
