--- a/nicnbk-ui-angular2/src/app/pe/view/pe.firm-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.firm-profile.component.html
@@ -302,7 +302,7 @@
                                         <tr *ngFor = "let memo of memoList" style="cursor: pointer" (click)="navigate(memo.memoType, memo.id)">
                                             <td width="10%" >{{getMeetingTypeName(memo.meetingType)}}</td>
                                             <!--<td width="30%"><a style="cursor: pointer" (click)="navigate(memo.memoType, memo.id)">{{memo.firmName}}</a></td>-->
-                                            <td width="30%">{{memo.fundName}}</td>
+                                            <td width="30%"><span *ngIf="memo.fundName == null || memo.fundName == ''">---</span>{{memo.fundName}}</td>
                                             <!--<td width="10%" th:text="${memoItem.meetingDate}"></td>-->
                                             <td width="10%">{{memo.meetingDate}}</td>
                                             <td width="10%">{{memo.owner}}</td>
