MacroMonitor data input forms: initial commit

--- a/nicnbk-ui-angular2/src/app/app.component.html
+++ b/nicnbk-ui-angular2/src/app/app.component.html
@@ -95,7 +95,7 @@
                         <!--&lt;!&ndash;<li><a href="#">Risk</a></li>&ndash;&gt;-->
                     <!--</ul>-->
                 <!--</li>-->
-                <li [routerLinkActive]="['active']"><a [routerLink]="['/monitoring/mm']" data-toggle="tooltip" title="Macro Monitor">Macro Monitor</a></li>
+                <li [routerLinkActive]="['active']"><a [routerLink]="['/macromonitor']" data-toggle="tooltip" title="Macro Monitor">Macro Monitor</a></li>
                 <li [routerLinkActive]="['active']"><a [routerLink]="['/m2s2']" data-toggle="tooltip" title="Meeting Memo Scoring System">M2S2</a></li>
                 <li [routerLinkActive]="['active']"  class="dropdown" *ngIf="showPrivateEquity()">
                     <!--<a th:href="@{/pe}">Private Equity</a>-->
