--- a/nicnbk-ui-angular2/src/app/monitoring/view/monitoring-macro-monitor.component.html
+++ b/nicnbk-ui-angular2/src/app/monitoring/view/monitoring-macro-monitor.component.html
@@ -32,6 +32,9 @@
     <div class="tab-content">
         <div id="global" class="tab-pane fade in active">
             <br/>
+            <button class="button" [routerLink]="['/macromonitor/1']">Edit</button>
+            <br/>
+            <br/>
             <div class="row">
                 <div class="col-md-12">
                     <div id="table">
@@ -47,6 +50,9 @@
             </div>
         </div>
         <div id="us" class="tab-pane fade">
+            <br/>
+            <button class="button" [routerLink]="['/macromonitor/2']">Edit</button>
+            <br/>
             <br/>
             <div class="row">
                 <div class="col-md-12">
@@ -64,6 +70,9 @@
         </div>
         <div id="china" class="tab-pane fade">
             <br/>
+            <button class="button" [routerLink]="['/macromonitor/3']">Edit</button>
+            <br/>
+            <br/>
             <div class="row">
                 <div class="col-md-12">
                     <div id="table_china">
@@ -79,6 +88,9 @@
             </div>
         </div>
         <div id="eu" class="tab-pane fade">
+            <br/>
+            <button class="button" [routerLink]="['/macromonitor/4']">Edit</button>
+            <br/>
             <br/>
             <div class="row">
                 <div class="col-md-12">
