1. application.properties file contents re-organized 2. branch merge bugs fixed 3. 'updater' field excluded from dozer mapping  4. logging config file for test env - logback-spring-test.xml  5. m2s2 and trip memo - search result sort order  6. news creation - '---' news type excluded

--- a/nicnbk-ui-angular2/src/app/news/view/news-edit.component.html
+++ b/nicnbk-ui-angular2/src/app/news/view/news-edit.component.html
@@ -31,7 +31,7 @@
                         <label for="newsType" class="control-label col-md-1">Category:</label>
                         <div class="col-md-4">
                             <select class="form-control" id="newsType" name="type" [(ngModel)]="newsItem.type" required #type="ngModel">
-                                <option value="NONE">---</option>
+                                <!--<option value="NONE">-&#45;&#45;</option>-->
                                 <option *ngFor = "let type of newsTypes" [value]="type.code">{{type.nameEn}}</option>
                             </select>
                             <div [hidden]="type.valid || type.pristine" class="alert alert-danger">
