--- a/nicnbk-ui-angular2/src/app/macromonitor/view/macromonitor.edit.component.html
+++ b/nicnbk-ui-angular2/src/app/macromonitor/view/macromonitor.edit.component.html
@@ -11,36 +11,41 @@
     </div>
 
     <!--<div class="row">-->
-        <!--<div class="col-md-12">-->
-            <!--<table class="table table-hover table-responsive" style="font-size: smaller">-->
-                <!--<tr>-->
-                    <!--<th>Date</th>-->
-                    <!--<th *ngFor="let field of fieldsLookup">{{field.nameEn}}</th>-->
-                <!--</tr>-->
-                <!--<tr *ngFor="let itemList of scoreListInput; let i=index">-->
-                    <!--<td>-->
-                        <!--<input class="input-group date" style="width: 100%" type="date" name="scoreDate" [(ngModel)]="dateListInput[i]">-->
-                    <!--</td>-->
-                    <!--<td *ngFor="let item of itemList">-->
-                        <!--<input style="width: 100%" type="text" [(ngModel)]="item.score">-->
-                    <!--</td>-->
-                    <!--<td>-->
-                        <!--<button type="button" class="btn-xs btn-danger" style="display: inline-block" (click)="removeRow(itemList, i)">-->
-                            <!--<span class="glyphicon glyphicon-minus"></span>-->
-                        <!--</button>-->
-                    <!--</td>-->
-                <!--</tr>-->
-                <!--<button type="button" class="btn-xs btn-info" style="display: inline-block" (click)="addRow()">-->
-                    <!--<span class="glyphicon glyphicon-plus"></span>-->
-                <!--</button>-->
-            <!--</table>-->
-            <!--<button type="button" class="btn-xs btn-info" style="display: inline-block" (click)="save()">Save</button>-->
-        <!--</div>-->
+    <!--<div class="col-md-12">-->
+    <!--<table class="table table-hover table-responsive" style="font-size: smaller">-->
+    <!--<tr>-->
+    <!--<th>Date</th>-->
+    <!--<th *ngFor="let field of fieldsLookup">{{field.nameEn}}</th>-->
+    <!--</tr>-->
+    <!--<tr *ngFor="let itemList of scoreListInput; let i=index">-->
+    <!--<td>-->
+    <!--<input class="input-group date" style="width: 100%" type="date" name="scoreDate" [(ngModel)]="dateListInput[i]">-->
+    <!--</td>-->
+    <!--<td *ngFor="let item of itemList">-->
+    <!--<input style="width: 100%" type="text" [(ngModel)]="item.score">-->
+    <!--</td>-->
+    <!--<td>-->
+    <!--<button type="button" class="btn-xs btn-danger" style="display: inline-block" (click)="removeRow(itemList, i)">-->
+    <!--<span class="glyphicon glyphicon-minus"></span>-->
+    <!--</button>-->
+    <!--</td>-->
+    <!--</tr>-->
+    <!--<button type="button" class="btn-xs btn-info" style="display: inline-block" (click)="addRow()">-->
+    <!--<span class="glyphicon glyphicon-plus"></span>-->
+    <!--</button>-->
+    <!--</table>-->
+    <!--<button type="button" class="btn-xs btn-info" style="display: inline-block" (click)="save()">Save</button>-->
+    <!--</div>-->
     <!--</div>-->
     <div class="row">
         <div class="col-md-12">
-            <table class="table table-hover table-responsive" style="font-size: smaller">
+            <table class="table table-hover table-responsive" style="font-size: smaller; overflow: scroll; overflow: auto; display: block" >
                 <tr>
+                    <th>
+                        <button type="btn-xs btn-info" class="pull-left" data-toggle="modal" data-target="#dateInputModal">
+                            <span class="glyphicon glyphicon-circle-arrow-up"></span>
+                        </button>
+                    </th>
                     <th></th>
                     <th *ngFor="let dateItem of dateList; let i=index">
                         <div class='input-group datetime' id="scoresDate" name='scoresDate' style="width: 100%">
@@ -50,30 +55,107 @@
                 </tr>
                 <tr *ngFor="let field of fieldsLookup; let j=index">
                     <td>
+                        <button type="btn-xs btn-info" class="pull-left" data-toggle="modal" data-target="#macroScoreInputModal">
+                            <span class="glyphicon glyphicon-circle-arrow-up"></span>
+                        </button>
+                    </td>
+                    <td width="200">
                         {{field.nameEn}}
                     </td>
                     <td *ngFor="let item of scoreListForModel[j]; let i=index">
                         <input style="width: 100%" type="text" [(ngModel)]="item.score">
                     </td>
                 </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td *ngFor="let item of scoreListForModel[0]; let i=index">
+                        <button type="button" class="btn-xs btn-danger" style="display: inline-block" (click)="removeColumn(i)">
+                            <span class="glyphicon glyphicon-minus"></span>
+                        </button>
+                    </td>
+                </tr>
                 <!--<tr *ngFor="let itemList of scoreListInput; let i=index">-->
-                    <!--<td>-->
-                        <!--<input class="input-group date" style="width: 100%" type="date" name="scoreDate" [(ngModel)]="dateListInput[i]">-->
-                    <!--</td>-->
-                    <!--<td *ngFor="let item of itemList">-->
-                        <!--<input style="width: 100%" type="text" [(ngModel)]="item.score">-->
-                    <!--</td>-->
-                    <!--<td>-->
-                        <!--<button type="button" class="btn-xs btn-danger" style="display: inline-block" (click)="removeRow(itemList, i)">-->
-                            <!--<span class="glyphicon glyphicon-minus"></span>-->
-                        <!--</button>-->
-                    <!--</td>-->
+                <!--<td>-->
+                <!--<input class="input-group date" style="width: 100%" type="date" name="scoreDate" [(ngModel)]="dateListInput[i]">-->
+                <!--</td>-->
+                <!--<td *ngFor="let item of itemList">-->
+                <!--<input style="width: 100%" type="text" [(ngModel)]="item.score">-->
+                <!--</td>-->
+                <!--<td>-->
+                <!--<button type="button" class="btn-xs btn-danger" style="display: inline-block" (click)="removeRow(itemList, i)">-->
+                <!--<span class="glyphicon glyphicon-minus"></span>-->
+                <!--</button>-->
+                <!--</td>-->
                 <!--</tr>-->
                 <button type="button" class="btn-xs btn-info" style="display: inline-block" (click)="addRow()">
                     <span class="glyphicon glyphicon-plus"></span>
                 </button>
+                <br/>
+                <br/>
             </table>
-            <button type="button" class="btn-xs btn-info" style="display: inline-block" (click)="save()">Save</button>
+            <button type="btn-xs btn-info" class="pull-left" data-toggle="modal" data-target="#macroScoreInputModal">
+                <span>Upload scores </span><span class="glyphicon glyphicon-circle-arrow-up"></span>
+            </button>
+            <button type="button" class="btn-xs btn-info pull-right" style="display: inline-block" (click)="save()">Save</button>
+        </div>
+    </div>
+    <div class="modal fade" id="macroScoreInputModal" role="dialog">
+        <div class="modal-dialog" style="overflow-y: scroll; max-height:85%;  margin-top: 50px; margin-bottom:50px;">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <div class="alert alert-danger" *ngIf="returnUploadErrorMessage != null"><span>{{scoreUploadErrorMessage}}</span></div>
+                    <div class="alert alert-info" *ngIf="returnUploadSuccessMessage != null"><span>{{scoreUploadSuccessMessage}}</span></div>
+                    <br/>
+                    <div>Format: <span style="font-weight: bold"> </span></div>
+                    <div>
+                        Date format: <span style="font-weight: bold"> </span>
+                    </div>
+                    <textarea class="form-control" placeholder="Paste macromonitor score here..." name="uploadedMacroMonitorScores" [(ngModel)]="uploadedMacroMonitorScores"></textarea>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default pull-left" data-dismiss="modal" (click)='closeMacroMonitorScoresModal()'>Close</button>
+                    <button type="button" class="btn btn-success pull-right" (click)="parseMacroMonitorScoresModal()">Add</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade" id="dateInputModal" role="dialog">
+        <div class="modal-dialog" style="max-height:100%;  margin-top: 50px; margin-bottom:50px;">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <div class="alert alert-danger" *ngIf="returnUploadErrorMessage != null"><span>{{scoreUploadErrorMessage}}</span></div>
+                    <div class="alert alert-info" *ngIf="returnUploadSuccessMessage != null"><span>{{scoreUploadSuccessMessage}}</span></div>
+                    <br/>
+                    <label for="fromDatePicker">From</label>
+                    <div class='input-group date col-md-3' id='fromDatePicker' style="width: 100%">
+                        <input type='text' class="form-control" id="fromDate" [(ngModel)]="fromDate"/>
+                            <span class="input-group-addon">
+                                <span class="glyphicon glyphicon-calendar"></span>
+                            </span>
+                    </div>
+                    <br>
+                    <label for="untilDatePicker">To</label>
+                    <div class='input-group date col-md-3' id='untilDatePicker' style="width: 100%">
+                        <input type='text' class="form-control" id="toDate" [(ngModel)]="toDate"/>
+                            <span class="input-group-addon">
+                                <span class="glyphicon glyphicon-calendar"></span>
+                            </span>
+                    </div>
+
+                    <textarea class="form-control" placeholder="Paste macromonitor score here..." name="uploadedDates" [(ngModel)]="uploadedDates"></textarea>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default pull-left" data-dismiss="modal" (click)='closeMacroMonitorScoresModal()'>Close</button>
+                    <button type="button" class="btn btn-success pull-right" (click)="createNewDateList()">Add</button>
+                </div>
+            </div>
         </div>
     </div>
 </div>
