Small data update in Monitoring->PE

--- a/nicnbk-ui-angular2/src/app/monitoring/view/monitoring-private-equity-fund.component.html
+++ b/nicnbk-ui-angular2/src/app/monitoring/view/monitoring-private-equity-fund.component.html
@@ -131,6 +131,9 @@
                     </div>
                 </div>
             </div>
+            <div class="row withpadding">
+                <div class="col-md-12" style="font-size: x-small">*As of Q4, 2016,    **Coverage not at 100% because some data on geography and sector is not available</div>
+            </div>
         </div>
         </div>
         <div id="description" class="tab-pane fade">
