MacroMonitor final version.

--- a/nicnbk-ui-angular2/src/app/macromonitor/view/macromonitor.view.component.html
+++ b/nicnbk-ui-angular2/src/app/macromonitor/view/macromonitor.view.component.html
@@ -16,9 +16,11 @@
     <div class="tab-content">
         <div id="global" class="tab-pane fade in active">
             <br/>
-            <button class="button" [routerLink]="['/macromonitor/1']">Edit</button>
-            <br/>
-            <br/>
+            <span *ngIf="showEditMacroMonitor()">
+                <button *ngIf="showEditMacroMonitor()" class="btn btn-primary" [routerLink]="['/macromonitor/1']">Edit</button>
+                <br/>
+                <br/>
+            </span>
             <div class="row">
                 <div class="col-md-12">
                     <div id="table">
@@ -35,9 +37,11 @@
         </div>
         <div id="us" class="tab-pane fade">
             <br/>
-            <button class="button" [routerLink]="['/macromonitor/2']">Edit</button>
-            <br/>
-            <br/>
+            <span *ngIf="showEditMacroMonitor()">
+                <button *ngIf="showEditMacroMonitor()" class="btn btn-primary" [routerLink]="['/macromonitor/2']">Edit</button>
+                <br/>
+                <br/>
+            </span>
             <div class="row">
                 <div class="col-md-12">
                     <div id="table_us">
@@ -54,9 +58,11 @@
         </div>
         <div id="china" class="tab-pane fade">
             <br/>
-            <button class="button" [routerLink]="['/macromonitor/3']">Edit</button>
-            <br/>
-            <br/>
+            <span *ngIf="showEditMacroMonitor()">
+                <button *ngIf="showEditMacroMonitor()" class="btn btn-primary" [routerLink]="['/macromonitor/3']">Edit</button>
+                <br/>
+                <br/>
+            </span>
             <div class="row">
                 <div class="col-md-12">
                     <div id="table_china">
@@ -73,9 +79,11 @@
         </div>
         <div id="eu" class="tab-pane fade">
             <br/>
-            <button class="button" [routerLink]="['/macromonitor/4']">Edit</button>
-            <br/>
-            <br/>
+            <span *ngIf="showEditMacroMonitor()">
+
+                <button *ngIf="showEditMacroMonitor()" class="btn btn-primary" [routerLink]="['/macromonitor/4']">Edit</button><br/>
+                <br/>
+            </span>
             <div class="row">
                 <div class="col-md-12">
                     <div id="table_eu">
