--- a/nicnbk-ui-angular2/src/app/macromonitor/view/macromonitor.edit.component.html
+++ b/nicnbk-ui-angular2/src/app/macromonitor/view/macromonitor.edit.component.html
@@ -1,6 +1,16 @@
 <div class="container">
     <div class="row top-buffer" >
         <div class="col-md-12">
+            <ol class="breadcrumb">
+                <li>
+                    <span><a [routerLink]="['/macromonitor']">Macromonitor</a></span>
+                </li>
+                <li class="active">{{typeStr}}</li>
+            </ol>
+        </div>
+    </div>
+    <div class="row top-buffer" >
+        <div class="col-md-12">
             <div class="alert alert-danger" *ngIf="errorMessage != null"><span>{{errorMessage}}</span>
             </div>
         </div>
@@ -9,104 +19,73 @@
             </div>
         </div>
     </div>
-
-    <!--<div class="row">-->
-    <!--<div class="col-md-12">-->
-    <!--<table class="table table-hover table-responsive" style="font-size: smaller">-->
-    <!--<tr>-->
-    <!--<th>Date</th>-->
-    <!--<th *ngFor="let field of fieldsLookup">{{field.nameEn}}</th>-->
-    <!--</tr>-->
-    <!--<tr *ngFor="let itemList of scoreListInput; let i=index">-->
-    <!--<td>-->
-    <!--<input class="input-group date" style="width: 100%" type="date" name="scoreDate" [(ngModel)]="dateListInput[i]">-->
-    <!--</td>-->
-    <!--<td *ngFor="let item of itemList">-->
-    <!--<input style="width: 100%" type="text" [(ngModel)]="item.score">-->
-    <!--</td>-->
-    <!--<td>-->
-    <!--<button type="button" class="btn-xs btn-danger" style="display: inline-block" (click)="removeRow(itemList, i)">-->
-    <!--<span class="glyphicon glyphicon-minus"></span>-->
-    <!--</button>-->
-    <!--</td>-->
-    <!--</tr>-->
-    <!--<button type="button" class="btn-xs btn-info" style="display: inline-block" (click)="addRow()">-->
-    <!--<span class="glyphicon glyphicon-plus"></span>-->
-    <!--</button>-->
-    <!--</table>-->
-    <!--<button type="button" class="btn-xs btn-info" style="display: inline-block" (click)="save()">Save</button>-->
-    <!--</div>-->
-    <!--</div>-->
-    <div class="row">
-        <div class="col-md-12">
-            <h4>Macro Monitor: {{typeStr}}</h4>
+    <form (ngSubmit)="save()" #scoreForm="ngForm" class="well span">
+        <div class="row">
+            <div class="col-md-12">
+                <table class="table table-hover table-responsive" style="font-size: smaller; overflow-x: auto; display: block; table-layout: fixed">
+                    <tr>
+                        <th>
+                            <button type="button" class="btn btn-xs pull-left" data-toggle="modal" data-target="#dateInputModal">
+                                <span class="glyphicon glyphicon-circle-arrow-up"></span>
+                            </button>
+                        </th>
+                        <th style="min-width: 200px; font-size: xx-small; text-align: right">DD-MM-YYYY:</th>
+                        <th *ngFor="let dateItem of dateList; let i=index; trackBy:trackByIndex;">
+                            <ng-form>
+                                <input type="text" style="width: 70px" name="date{{i}}"  [(ngModel)]="dateList[i]" pattern="\s*(0[1-9]|[12][0-9]|3[01])[-](0[1-9]|1[012])[-](19|20)\d\d\s*" #date="ngModel" required/>
+                                <div style="width: 70px" [hidden]="date.valid || date.pristine" class="alert alert-danger">Invalid date</div>
+                            </ng-form>
+                        </th>
+                    </tr>
+                    <tr *ngFor="let field of fieldsLookup; let j=index">
+                        <td>
+                            <button type="button" class="btn btn-xs btn pull-left" data-toggle="modal" data-target="#macroScoreInputModal" (click)="macroScoreInputModalHelper(j)">
+                                <span class="glyphicon glyphicon-circle-arrow-up"></span>
+                            </button>
+                        </td>
+                        <td>
+                            {{field.nameEn}}
+                        </td>
+                        <td *ngFor="let item of scoreListForModel[j]; let i=index; trackBy:trackByIndex;">
+                            <input style="width: 70px" type="text" name="score{{j}}{{i}}" [(ngModel)]="item.score">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <button type="button" class="btn-xs btn-info" style="display: inline-block" (click)="addRow()">
+                                <span class="glyphicon glyphicon-plus"></span>
+                            </button>
+                        </td>
+                        <td></td>
+                        <td *ngFor="let item of scoreListForModel[0]; let i=index">
+                            <button type="button" class="btn-xs btn-danger" style="display: inline-block" (click)="removeColumn(i)">
+                                <span class="glyphicon glyphicon-minus"></span>
+                            </button>
+                        </td>
+                    </tr>
+                    <br/>
+                </table>
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="col-md-3 pull-left">
+                            <button type="button" class="btn-sm btn-danger" data-toggle="modal" data-target="#deleteAllModal">Delete all <span class="glyphicon glyphicon-remove"></span></button>
+                        </div>
+                        <div class="col-md-1 pull-right">
+                            <button type="submit" class="btn btn-sm btn-success" [disabled]="!scoreForm.form.valid || this.dateList.length==0">SAVE</button>
+                        </div>
+                    </div>
+                </div>
+                <br>
+                <br>
+            </div>
         </div>
-    </div>
-    <div class="row">
-        <div class="col-md-12">
-            <table class="table table-hover table-responsive" style="font-size: smaller; overflow: scroll; overflow: auto; display: block" >
-                <tr>
-                    <th>
-                        <button type="btn-xs btn-info" class="pull-left" data-toggle="modal" data-target="#dateInputModal">
-                            <span class="glyphicon glyphicon-circle-arrow-up"></span>
-                        </button>
-                    </th>
-                    <th></th>
-                    <th *ngFor="let dateItem of dateList; let i=index; trackBy:trackByIndex;">
-                        <!--<div class='input-group' id="scoresDate" name='scoresDate' style="width: 100%">-->
-                        <input type="text" style="width: 100%" [(ngModel)]="dateList[i]"/>
-                        <!--</div>-->
-                    </th>
-                </tr>
-                <tr *ngFor="let field of fieldsLookup; let j=index">
-                    <td>
-                        <button type="btn-xs btn-info" class="pull-left" data-toggle="modal" data-target="#macroScoreInputModal" (click)="macroScoreInputModalHelper(j)">
-                            <span class="glyphicon glyphicon-circle-arrow-up"></span>
-                        </button>
-                    </td>
-                    <td width="200">
-                        {{field.nameEn}}
-                    </td>
-                    <td *ngFor="let item of scoreListForModel[j]; let i=index">
-                        <input style="width: 100%" type="text" [(ngModel)]="item.score">
-                    </td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td *ngFor="let item of scoreListForModel[0]; let i=index">
-                        <button type="button" class="btn-xs btn-danger" style="display: inline-block" (click)="removeColumn(i)">
-                            <span class="glyphicon glyphicon-minus"></span>
-                        </button>
-                    </td>
-                </tr>
-                <!--<tr *ngFor="let itemList of scoreListInput; let i=index">-->
-                <!--<td>-->
-                <!--<input class="input-group date" style="width: 100%" type="date" name="scoreDate" [(ngModel)]="dateListInput[i]">-->
-                <!--</td>-->
-                <!--<td *ngFor="let item of itemList">-->
-                <!--<input style="width: 100%" type="text" [(ngModel)]="item.score">-->
-                <!--</td>-->
-                <!--<td>-->
-                <!--<button type="button" class="btn-xs btn-danger" style="display: inline-block" (click)="removeRow(itemList, i)">-->
-                <!--<span class="glyphicon glyphicon-minus"></span>-->
-                <!--</button>-->
-                <!--</td>-->
-                <!--</tr>-->
-                <button type="button" class="btn-xs btn-info" style="display: inline-block" (click)="addRow()">
-                    <span class="glyphicon glyphicon-plus"></span>
-                </button>
-                <br/>
-                <br/>
-            </table>
-            <button type="button" id="saveButton" class="btn-xs btn-info pull-right" style="display: inline-block" (click)="save()">Save</button>
-        </div>
-    </div>
+    </form>
     <div class="modal fade" id="macroScoreInputModal" role="dialog">
         <div class="modal-dialog" style="overflow-y: scroll; max-height:85%;  margin-top: 50px; margin-bottom:50px;">
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <span>{{this.fieldsValueList[modalFieldTypeIndex]}}</span>
                 </div>
                 <div class="modal-body">
                     <div class="alert alert-danger" *ngIf="scoreUploadErrorMessage != null"><span>{{scoreUploadErrorMessage}}</span></div>
@@ -137,6 +116,20 @@
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default pull-left" data-dismiss="modal" (click)='closeMacroMonitorScoresModal()'>Close</button>
                     <button type="button" class="btn btn-success pull-right" (click)="createNewDateList()">Add</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade" id="deleteAllModal" role="dialog">
+        <div class="modal-dialog modal-sm">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Are you sure you want to delete all data?</h4>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-success" (click)="deleteAll()" data-dismiss="modal">Yes</button>
+                    <button type="button" class="btn btn-danger" data-dismiss="modal">No</button>
                 </div>
             </div>
         </div>
